--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,10 @@ verify_ssl = true
 
 [dev-packages]
 
-
 [packages]
+flask-sqlalchemy = "*"
+flask-marshmallow = "*"
+marshmallow-sqlalchemy = "*"
 
 [requires]
 python_version = "3.7"
